# RISCV-OpenBLAS-Sample

./: .gitignore  .gitmodules  CMakeLists.txt  hardware.h  main.cpp
RISCV64_GENERIC/include/openblas/: openblas_config.h
RISCV64_GENERIC/lib/cmake/OpenBLAS/: OpenBLASConfigVersion.cmake  OpenBLASTargets-noconfig.cmake  OpenBLASTargets.cmake
RISCV64_GENERIC/lib/pkgconfig/: openblas.pc
cmake/: toolchain.cmake
